- Prototyp "Erweiterte Suche"

--- a/trunk/design/liman.css
+++ b/trunk/design/liman.css
@@ -80,6 +80,10 @@ h1 {
 	border: 1px solid black;
 	border-collapse: collapse;
 }
+#searchmore td {
+	width:100px;
+}
+
 
 #searchresult td, #searchresult th,  #userlist th{
 	border: 1px solid black;
