kleinere HTML-Schönheitskorrekturen im Zusammenhang mit erweiterter Suche

--- a/trunk/design/liman.css
+++ b/trunk/design/liman.css
@@ -80,8 +80,8 @@ h1 {
 	border: 1px solid black;
 	border-collapse: collapse;
 }
-#searchmore td {
-	width:100px;
+.searchmore td {
+	width:9em;
 }
 
 
