- Include Guards entfernt (dank require_once nicht benötigt) - searchmore.php zum Suchen vorbereitet - litmod.php zum Hinzufügen vorbereitet - usermod.php zum Hinzufügen vorbereitet - Anzeigen diverser Knöpfe rechteabhängig gemacht - Suche in Nutzerinterface hinzugefügt - Kommentar::Insert nur ausführen, wenn Literatur vorhanden und noch kein Kommentar von Nutzer - Kommagetrennte Liste von Autoren bei Suche::AutorTitelSuche erlaubt - Anzeigen der Nutzer in userlist.php rechteabhängig gemacht

--- a/trunk/design/liman.css
+++ b/trunk/design/liman.css
@@ -15,6 +15,15 @@ h1 {
 	margin-left: 1em;
 }
 
+hr {
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+#content h2 {
+	padding-bottom: 1em;
+}
+
 #sidebar {
 	float: left;
 	width: 11.5em;
