--- a/trunk/design/liman.css
+++ b/trunk/design/liman.css
@@ -123,6 +123,10 @@ hr {
 	vertical-align: top;
 }
 
+#litkommentare .kommentar {
+	width: 99%;
+}
+
 #error_list, #error {
 	padding: 0.5em;
 	border: 2px solid red;
